--- a/saját/style.css
+++ b/saját/style.css
@@ -1,55 +1,50 @@
 header{    
-    background-position: center center;
+    background-position: center;
     height: 350px;
-    background-image: url(img/konyvek-inspiracio-nyito.jpg);
 }
 
 h1{
     margin-top: 80px;
     padding-left: 11rem; 
     font-family: Verdana;   
-    color: green;
+    color: black;
     font-weight: bold;
 }
 
 h2{    
     margin-top: 10px;    
-    color:  #416618;
+    color: black;
     border-left: 3px dotted  #416618;
     font-variant: small-caps;
     padding: 5px 15px;
+    text-align: center;
 }
 
 h3{    
     font-weight: bold;
-    color: #894f3b;    
+    color: black;    
     text-align: center;
     font-size: 1.3rem;
     letter-spacing: 1px;
 }
 
-
-li{
-    list-style-image: url(../img/lemon2.png);
-    float: left;
-    margin-left: 40px;
-}
-
-
-td,th{
-    text-align: center;
-}
-
-thead>tr:first-child{    
-    letter-spacing: 2px;  
-    text-transform: uppercase;  
-}
-
 .navbar{
-    background-color: lightgreen;
+    background-color: orange
 }
 
 p{
     text-align: justify;
     text-indent: 15px;
+    color: black;
+    font-size: 1.3rem;
+    letter-spacing: 1px;
+    font-weight: bold;
+}
+
+body{
+    background-image: url(road-1072823_960_720.jpg);
+    height: auto;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
